--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,15 +9,17 @@ header {
     height:250px;
     background-size: cover;
     background-position: center;
+    border-style: dotted;
+    border-color:darkcyan;
+    border-width: 4px
 }
 
 h1{
     margin-top: 0px;
     margin-bottom: 0px;
-    font-size: 35px;
+    font-size: 50px;
     padding-top: 100px;
     padding-left: 100px;
-    text-shadow: 1px 2px 0 gray;
 }
 
 header p{
@@ -35,15 +37,15 @@ section{
 section img{
     width: 270px;
     margin: 15px;
-    border-color: rgb(210, 210, 210);
-    border-width: 1px;
-    border-style: solid;
+    border-color:darkcyan;
+    border-width: 4px;
+    border-style: dotted; 
 }
 
 section p {
     padding-left: 70px;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 20px;
     font-style:normal;
 }
 
@@ -51,8 +53,8 @@ footer{
     height: 2em;
     line-height: 2em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 900;
-    background-color: chocolate;
+    font-weight: 50px;
+    background-color:darkcyan;
     text-align: center;
     color: white
 }
